# economind

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  NOTES.md  SETUP.md  TODO.md  docker-compose.yml  economind.toml.example  trading_bot.py  universe.csv
.cargo/: config.toml
.vds/: vds.db
agentic/: Cargo.toml
agentic/src/: analysis.rs  lib.rs  llm.rs  mcp.rs
algorithms/: Cargo.toml
algorithms/src/: engine.rs  lib.rs  screener.rs
algorithms/src/engine/: detector.rs  pattern.rs  testing.rs
api/: Cargo.toml  build.rs
api/src/: auth.rs  error.rs  main.rs  state.rs
api/src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
api/src/rest/: backtest.rs  data.rs  instruments.rs  mod.rs  positions.rs  signals.rs  strategy.rs
api/src/ws/: mod.rs
backtest/: Cargo.toml
backtest/src/: lib.rs  metrics.rs  runner.rs  simulation.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: analyze.rs  backtest.rs  ingest.rs  mod.rs  run.rs  signals.rs
core/: Cargo.toml
core/src/: lib.rs  model.rs
core/src/model/: ticker.rs  trades.rs  types.rs
core/src/model/analysis/: pattern.rs  pivot.rs  signals.rs
crates/agentic/: Cargo.toml
crates/agentic/src/: agent.rs  analysis.rs  lib.rs  llm.rs  mcp.rs  persona.rs
crates/api/: Cargo.toml  build.rs
crates/api/src/: auth.rs  error.rs  events.rs  lib.rs  main.rs  pipeline_factory.rs  scheduler.rs  state.rs
crates/api/src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
crates/api/src/rest/: backtest.rs  chat.rs  data.rs  datafeed.rs  instruments.rs  mod.rs  positions.rs  scheduler.rs  settings.rs  signals.rs  strategy.rs
crates/api/src/ws/: mod.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: lib.rs  metrics.rs  runner.rs  simulation.rs
crates/broker/: Cargo.toml
crates/broker/src/: alpaca.rs  error.rs  lib.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: analyze.rs  backtest.rs  datafeed.rs  ingest.rs  mod.rs  run.rs  signals.rs  universe.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/src/: error.rs  lib.rs  model.rs
crates/core/src/model/: news.rs  ticker.rs  trades.rs
crates/core/src/model/analysis/: mod.rs  (+2 more)
crates/db/: Cargo.toml  postgres.sql
crates/db/migrations/: 001_initial_schema.sql  003_drop_legacy_schema.sql  004_broker_execution.sql
crates/db/src/: datastore.rs  error.rs  lib.rs  storage.rs
crates/db/src/storage/: duckdb.rs  postgres.rs  postgres_strategy.rs  schema.sql  strategy_traits.rs  traits.rs
crates/db/tests/: smoke.rs
crates/indicators/src/: engine.rs  lib.rs  screener.rs
crates/indicators/src/engine/: detector.rs  pattern.rs  testing.rs
crates/ingest/: NOTES.md
crates/ingest/src/: bin.rs  error.rs  httpclient.rs  lib.rs  manager.rs  provider.rs
crates/ingest/src/provider/: edgar.rs  fred.rs  kibot.rs  rreichel.rs  simfin.rs  tiingo.rs  traits.rs  yahoo.rs
crates/strategy/src/: config.rs  ensemble.rs  lib.rs  orchestrator.rs  pipeline.rs  stack.rs  traits.rs  voting.rs
dashboard/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.html
dashboard/src/lib/: AgentChat.svelte  api.ts  pluginRegistry.ts  ws.ts
dashboard/src/lib/stores/: auth.ts  events.ts  pageContext.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/backtest/: +page.svelte
dashboard/src/routes/data/: +page.svelte
dashboard/src/routes/portfolio/: +page.svelte
dashboard/src/routes/settings/: +page.svelte
dashboard/src/routes/signals/: +page.svelte
dashboard/src/routes/strategies/: +page.svelte
datafeed/: Cargo.toml
datafeed/src/: bin.rs  provider.rs
datafeed/src/provider/: kibot.rs  rreichel.rs  tiingo.rs  traits.rs
datamodel/: Cargo.toml
datamodel/src/: error.rs  lib.rs  model.rs  storage.rs
datamodel/src/model/: news.rs  ticker.rs  trades.rs  types.rs
datamodel/src/model/analysis/: mod.rs  pivot.rs  trend.rs
datamodel/src/storage/: duckdb.rs  postgres.rs  schema.sql  traits.rs
db/: Cargo.toml
db/migrations/: 002_timescaledb_hypertable.sql
db/src/: datastore.rs  error.rs  lib.rs  storage.rs
db/src/storage/: duckdb.rs  postgres.rs  postgres_strategy.rs  schema.sql  strategy_traits.rs  traits.rs
db/tests/: smoke.rs
docker/: init.sql
indicators/: Cargo.toml
indicators/src/: engine.rs  lib.rs
indicators/src/engine/: detector.rs  pattern.rs  testing.rs
ingest/: Cargo.toml
ingest/src/: bin.rs  error.rs  httpclient.rs  lib.rs  manager.rs  provider.rs
ingest/src/provider/: edgar.rs  fred.rs  kibot.rs  simfin.rs  tiingo.rs  yahoo.rs
ingest/src/provider/archive/: polygonio.rs
patches/: libduckdb-sys-msvc-bundled-windows-fixes.patch
personas/: aswath_damodaran.json  ben_graham.json  bill_ackman.json  cathie_wood.json  charlie_munger.json  fundamentals.json  growth_agent.json  hedge_fund_manager.json  michael_burry.json  mohnish_pabrai.json  nassim_taleb.json  news_sentiment.json  peter_lynch.json  phil_fisher.json  portfolio_manager.json  rakesh_jhunjhunwala.json  risk_manager.json  sector_analyst.json  sentiment.json  stanley_druckenmiller.json  technicals.json  valuation.json  warren_buffett.json
server/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
strategies/strategy-atr-sizer/: Cargo.toml
strategies/strategy-atr-sizer/src/: lib.rs
strategies/strategy-kelly-sizer/: Cargo.toml
strategies/strategy-kelly-sizer/src/: lib.rs
strategies/strategy-mean-reversion/: Cargo.toml
strategies/strategy-mean-reversion/src/: lib.rs
strategies/strategy-momentum/: Cargo.toml
strategies/strategy-momentum/src/: lib.rs
strategies/strategy-regime/: Cargo.toml
strategies/strategy-regime/src/: lib.rs
strategies/strategy-trend-follow/: Cargo.toml
strategies/strategy-trend-follow/src/: lib.rs
strategy/: Cargo.toml
strategy/src/: config.rs  context.rs  ensemble.rs  lib.rs  orchestrator.rs  pipeline.rs  run.rs  stack.rs  traits.rs  voting.rs
(+3 files in other folders)
