[package]
name = "economind-agentic"
version.workspace = true
edition.workspace = true

[dependencies]
economind-core = { workspace = true }
economind-db   = { workspace = true }

chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
