[package]
name = "economind-datamodel"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
futures-core.workspace = true
duckdb.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"