[package]
name = "economind-strategy"
version.workspace = true
edition.workspace = true

[dependencies]
economind-core = { workspace = true }
economind-db   = { workspace = true }

async-trait  = { workspace = true }
chrono       = { workspace = true }
futures      = { workspace = true }
rust_decimal = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
uuid         = { workspace = true }
