[package]
name = "economind-broker"
version.workspace = true
edition.workspace = true

[dependencies]
economind-core = { workspace = true }

anyhow       = { workspace = true }
async-trait  = { workspace = true }
chrono   = { workspace = true }
reqwest  = { workspace = true }
rust_decimal = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
