[package]
name = "economind-db"
version.workspace = true
edition.workspace = true

[dependencies]
economind-core = { workspace = true }

async-trait  = { workspace = true }
chrono       = { workspace = true }
duckdb       = { workspace = true }
futures      = { workspace = true }
futures-core = { workspace = true }
rust_decimal = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
tempfile = "3"
