[package]
name = "strategy-regime"
version.workspace = true
edition.workspace = true

[dependencies]
economind-core     = { workspace = true }
economind-strategy = { workspace = true }

chrono       = { workspace = true }
rust_decimal = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
